Added support for multiple snips within the same snipwidget
- If correct keyboard modifier is pressed, user can take multiple cropped snips of the same image within single snipwidget. Only last one taken is copied to clipboard, all of them are saved to disk

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(ScreenSnip # WIN32 # todo
     utility.cpp
 	settings.h
     settings.cpp
+	hotkeymanager.h
+    hotkeymanager.cpp
 )
 
 target_link_libraries(ScreenSnip Qt5::Widgets)
